--- a/index.html
+++ b/index.html
@@ -15,29 +15,36 @@
 </head>
 
 <body>
+    <!--inicio header-->
     <header>
-        <!--inicio header-->
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-12 text-center col-lg-6 text-lg-left">
-                    <h1><i id="paw_logo" class="fa-solid fa-paw"></i> Hogar De Patis</h1>
-                </div>
-                <div class="col-12 text-center col-lg-6 text-lg-right">
-                    <nav>
-                        <ul class="nav">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-                            <li class="nav-item"><a class="nav-link" href="pages/nosotros.html">Nosotros</a></li>
-                            <li class="nav-item"><a class="nav-link" href="pages/adopta.html">Adopta</a></li>
-                            <li class="nav-item"><a class="nav-link" href="pages/contacto.html">Contacto</a></li>
-                            <li class="nav-item"><a class="nav-link" href="pages/donaciones.html">Donaciones</a></li>
+            <div>
+                <nav class="navbar navbar-expand-lg navbar-dark default-color">
+                    <h1 class="navbar-brand"><i id="paw_logo" class="fa-solid fa-paw"></i> Hogar De Patis</h1>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent-3" aria-controls="navbarSupportedContent-3"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent-3">
+                        <ul class="navbar-nav ml-lg-auto text-center">
+                            <li class="nav-item active"><a class="nav-link waves-effect waves-light"
+                                    href="index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link waves-effect waves-light"
+                                    href="pages/nosotros.html">Nosotros</a></li>
+                            <li class="nav-item"><a class="nav-link waves-effect waves-light"
+                                    href="pages/adopta.html">Adopta</a></li>
+                            <li class="nav-item"><a class="nav-link waves-effect waves-light"
+                                    href="pages/contacto.html">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link waves-effect waves-light"
+                                    href="pages/donaciones.html">Donaciones</a></li>
                         </ul>
-                    </nav>
-                </div>
+                    </div>
+                </nav>
             </div>
         </div>
     </header>
     <!--fin header-->
-
     <main id="main_index">
         <!--inicio main-->
         <div class="container-fluid">
@@ -53,14 +60,29 @@
                             <div class="carousel-item active">
                                 <img class="d-block w-100" src="img/cachorros-web.jpg" data-src="img/cachorros-web.jpg"
                                     alt="First slide">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h1>
+                                        <strong>9 de cada 10 cachorros</strong>que nacen nunca encontrarán un hogar
+                                    </h1>
+                                </div>
                             </div>
                             <div class="carousel-item">
                                 <img class="d-block w-100" src="img/slider-adopta.jpg" data-src="img/slider-adopta.jpg"
                                     alt="Second slide">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h1>
+                                        <strong> Adopta</strong> y salva una vida
+                                    </h1>
+                                </div>
                             </div>
                             <div class="carousel-item">
                                 <img class="d-block w-100" src="img/slider-hogardepatis.jpg"
                                     data-src="img/slider-hogardepatis.jpg" alt="third slide">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h1>
+                                        <strong> Cuando la voluntad existe</strong> hay mil recursos
+                                    </h1>
+                                </div>
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
@@ -85,27 +107,29 @@
         <div class="container">
             <div class="row">
                 <section id="sectionSalvarVidas">
-                    <div>
+                    <div class="col-12">
                         <h2>Salva Vidas</h2>
                         <p>Es responsabilidad del Estado realizar campañas de castración gratuitas, masivas,
                             sistemáticas y
-                            extensivas en el tiempo, asi como también concSientizar sobre el maltrato animal y como
+                            extensivas en el tiempo, asi como también concientizar sobre el maltrato animal y como
                             denunciarlo. Pero
                             también es necesaria la participación responsable de cada ciudadano.
                         </p>
                     </div>
-                    <div class="container">
-                        <div class="row">
-                            <div class="card col-6">
-                                <img class="card-img" src="img/castra.jpg" alt="Card image">
-                                <div class="card-img-overlay">
-                                    <p class="card-text">AYUDA CASTRANDO</p>
+                    <div class="col-12">
+                        <div class="container">
+                            <div class="row">
+                                <div class="card col-12 col-lg-6">
+                                    <img class="card-img" src="img/castra.jpg" alt="Card image">
+                                    <div class="card-img-overlay text-center">
+                                        <p class="card-text">AYUDA CASTRANDO</p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="card col-6">
-                                <img class="card-img" src="img/denuncia_maltrato.jpg" alt="Card image">
-                                <div class="card-img-overlay">
-                                    <p class="card-text">DENUNCIA EL MALTRATO</p>
+                                <div class="card col-12 col-lg-6">
+                                    <img class="card-img" src="img/denuncia_maltrato.jpg" alt="Card image">
+                                    <div class="card-img-overlay text-center">
+                                        <p class="card-text">DENUNCIA EL MALTRATO</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -217,24 +241,85 @@
     </main>
     <!--fin main-->
     <!--inicio footer-->
-    <footer>
+    <!-- Footer -->
+    <footer class="site-footer">
         <div class="container">
-            <div id="contenedor_items_footer" class="row justify-content-center align-items-center">
-                <div id="form_novedades_footer" class="col-5">
-                    <div id="contenedor_form" class="row justify-content-center">
+            <div class="row justify-content-center justify-content-lg-center">
+                <div id="footer-about-us" class="col-lg-2 widget widget-footer-menu text-center">
+                    <h3 class="widget-title">Hogar de Patis</h3>
+                    <p>Hogar de Patis es un hogar sin fines de lucro abocada a difundir, proteger y promover los
+                        derechos
+                        de los animales.</p>
+                </div>
+                <div class="col-lg-4 widget widget-footer-menu">
+                    <div id="footer-form-novedades" class="row justify-content-center justify-content-lg-center">
                         <form>
-                            <div class="form-group text-center">
+                            <div class="form-group text-center text-lg-center">
                                 <label for="InputEmailNovedades">Recibí las novedades por mail</label>
                                 <input type="email" class="form-control" id="InputEmail1">
                             </div>
-                            <div class="text-center">
+                            <div class=" text-center text-lg-center">
                                 <button type="submit" class="btn btn-primary">Enviar</button>
                             </div>
                         </form>
                     </div>
                 </div>
-                <div class="col-3">
-                    <div id="contenedor_form" class="row justify-content-center">
+                <div class="col-lg-2 col-md-2 col-sm-6 col-xs-6">
+                    <div class="widget widget-footer-menu text-center">
+                        <h3 class="widget-title">Menu</h3>
+                        <ul class="menu_footer">
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="pages/nosotros.html">Nosotros</a></li>
+                            <li><a href="pages/adopta.html">Adopta</a></li>
+                            <li><a href="pages/contacto.html">Contacto</a></li>
+                            <li><a href="pages/donaciones.html">Donaciones</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-lg-offset-1 col-md-4 col-sm-6 col-xs-6">
+                    <div class="widget widget-social-links text-center">
+                        <h3 class="widget-title">Seguinos en</h3>
+                        <ul class="footer-social">
+                            <li><a href="#" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
+                            <li><a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href="#" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+                            <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                    <!--Copyright-->
+                    <div class="copyright text-center">
+                        <br /><span><img width="95" src="../img/logo.PNG"></span>
+                        © 2020 - Todos los Derechos Reservados
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+
+
+
+
+    <!-- Footer -->
+    <!-- <footer>
+        <div class="container">
+            <div id="contenedor_items_footer" class="row justify-content-lg-center align-items-lg-center">
+                <div id="form_novedades_footer" class="col-lg-5">
+                    <div id="contenedor_form" class="row justify-content-center justify-content-lg-center">
+                        <form>
+                            <div class="form-group text-center text-lg-center">
+                                <label for="InputEmailNovedades">Recibí las novedades por mail</label>
+                                <input type="email" class="form-control" id="InputEmail1">
+                            </div>
+                            <div class=" text-center text-lg-center">
+                                <button type="submit" class="btn btn-primary">Enviar</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div id="contenedor_form" class="row justify-content-center justify-content-lg-center">
                         <ul class="menu_footer">
                             <li class="titulo_menu">Menú</li>
                             <li><a href="../index.html">Inicio</a></li>
@@ -245,21 +330,23 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-4">
-                    <h4 class="seguinos">Seguinos</h4>
-                    <div class="iconos_redes">
-                        <button><i class="fa-brands fa-facebook-f"></i></button>
-                        <button><i class="fa-brands fa-twitter"></i></button>
-                        <button><i class="fa-brands fa-youtube"></i></button>
-                        <button><i class="fa-brands fa-instagram"></i></button>
-                    </div>
-                    <div class="logo_footer">
-                        <img src="../img/logo.PNG" alt="Logo de Hogar de Patis footer">
+                <div class="col-lg-4">
+                    <div class="row justify-content-center">
+                        <h4 class="seguinos">Seguinos</h4>
+                        <div class="iconos_redes">
+                            <button><i class="fa-brands fa-facebook-f"></i></button>
+                            <button><i class="fa-brands fa-twitter"></i></button>
+                            <button><i class="fa-brands fa-youtube"></i></button>
+                            <button><i class="fa-brands fa-instagram"></i></button>
+                        </div>
+                        <div class="logo_footer">
+                            <img src="../img/logo.PNG" alt="Logo de Hogar de Patis footer">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <!--fin footer-->
 </body>
 
