--- a/pages/adopta.html
+++ b/pages/adopta.html
@@ -18,22 +18,23 @@
     <header>
         <!--inicio header-->
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-12 text-center col-lg-6 text-lg-left">
-                    <h1><i id="paw_logo" class="fa-solid fa-paw"></i> Hogar De Patis</h1>
-                </div>
-                <div class="col-12 text-center col-lg-6 text-lg-right">
-                    <nav>
-                        <ul class="nav">
-                            <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                            <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                            <li class="nav-item"><a class="nav-link" href="adopta.html">Adopta</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-                            <li class="nav-item"><a class="nav-link" href="donaciones.html">Donaciones</a>
-                            </li>
+            <div>
+                <nav class="navbar navbar-expand-lg navbar-dark default-color">
+                    <h1 class="navbar-brand"><i id="paw_logo" class="fa-solid fa-paw"></i> Hogar De Patis</h1>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-3"
+                        aria-controls="navbarSupportedContent-3" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent-3">
+                        <ul class="navbar-nav ml-lg-auto text-center">
+                            <li class="nav-item"><a class="nav-link waves-effect waves-light" href="../index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link waves-effect waves-light" href="nosotros.html">Nosotros</a></li>
+                            <li class="nav-item active"><a class="nav-link waves-effect waves-light" href="adopta.html">Adopta</a></li>
+                            <li class="nav-item"><a class="nav-link waves-effect waves-light" href="contacto.html">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link waves-effect waves-light" href="donaciones.html">Donaciones</a></li>
                         </ul>
-                    </nav>
-                </div>
+                    </div>
+                </nav>
             </div>
         </div>
     </header>
