--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -20,17 +20,23 @@
             <div>
                 <nav class="navbar navbar-expand-lg navbar-dark default-color">
                     <h1 class="navbar-brand"><i id="paw_logo" class="fa-solid fa-paw"></i> Hogar De Patis</h1>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-3"
-                        aria-controls="navbarSupportedContent-3" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent-3" aria-controls="navbarSupportedContent-3"
+                        aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent-3">
                         <ul class="navbar-nav ml-lg-auto text-center">
-                            <li class="nav-item"><a class="nav-link waves-effect waves-light" href="../index.html">Inicio</a></li>
-                            <li class="nav-item active"><a class="nav-link waves-effect waves-light" href="nosotros.html">Nosotros</a></li>
-                            <li class="nav-item"><a class="nav-link waves-effect waves-light" href="adopta.html">Adopta</a></li>
-                            <li class="nav-item"><a class="nav-link waves-effect waves-light" href="contacto.html">Contacto</a></li>
-                            <li class="nav-item"><a class="nav-link waves-effect waves-light" href="donaciones.html">Donaciones</a></li>
+                            <li class="nav-item active"><a class="nav-link waves-effect waves-light"
+                                    href="../index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link waves-effect waves-light"
+                                    href="nosotros.html">Nosotros</a></li>
+                            <li class="nav-item"><a class="nav-link waves-effect waves-light"
+                                    href="adopta.html">Adopta</a></li>
+                            <li class="nav-item"><a class="nav-link waves-effect waves-light"
+                                    href="contacto.html">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link waves-effect waves-light"
+                                    href="donaciones.html">Donaciones</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -62,44 +68,48 @@
     <!--fin main-->
     <!--inicio footer-->
     <footer>
-        <div class="container">
-            <div id="contenedor_items_footer" class="row justify-content-center align-items-center">
-                <div id="form_novedades_footer" class="col-5">
-                    <div id="contenedor_form" class="row justify-content-center">
-                        <form>
-                            <div class="form-group text-center">
-                                <label for="InputEmailNovedades">Recibí las novedades por mail</label>
-                                <input type="email" class="form-control" id="InputEmail1">
-                            </div>
-                            <div class="text-center">
-                                <button type="submit" class="btn btn-primary">Enviar</button>
-                            </div>
-                        </form>
+        <div class="container-footer">
+            <div class="one-place">
+                <h3>Hogar de Patis</h3>
+                <p>Hogar de Patis es un hogar sin fines de lucro abocada a difundir, proteger y promover los
+                    derechos
+                    de los animales.</p>
+            </div>
+            <div id="footer-form-novedades" class="one-place">
+                <form>
+                    <div class="form-group text-center text-lg-center">
+                        <label for="InputEmailNovedades">Recibí las novedades por mail</label>
+                        <input type="email" class="form-control" id="InputEmail1">
                     </div>
+                    <div class=" text-center text-lg-center">
+                        <button type="submit" class="btn btn-primary">Enviar</button>
+                    </div>
+                </form>
+            </div>
+            <div class="one-place">
+                <h3>Menu</h3>
+                <ul class="menu_footer">
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="adopta.html">Adopta</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="donaciones.html">Donaciones</a></li>
+                </ul>
+            </div>
+            <div class="one-place">
+                <div>
+                    <h3>Seguinos en</h3>
+                    <ul class="footer-social">
+                        <li><a href="#" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                    </ul>
                 </div>
-                <div class="col-3">
-                    <div id="contenedor_form" class="row justify-content-center">
-                        <ul class="menu_footer">
-                            <li class="titulo_menu">Menú</li>
-                            <li><a href="../index.html">Inicio</a></li>
-                            <li><a href="nosotros.html">Nosotros</a></li>
-                            <li><a href="adopta.html">Adopta</a></li>
-                            <li><a href="contacto.html">Contacto</a></li>
-                            <li><a href="donaciones.html">Donaciones</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <h4 class="seguinos">Seguinos</h4>
-                    <div class="iconos_redes">
-                        <button><i class="fa-brands fa-facebook-f"></i></button>
-                        <button><i class="fa-brands fa-twitter"></i></button>
-                        <button><i class="fa-brands fa-youtube"></i></button>
-                        <button><i class="fa-brands fa-instagram"></i></button>
-                    </div>
-                    <div class="logo_footer">
-                        <img src="../img/logo.PNG" alt="Logo de Hogar de Patis footer">
-                    </div>
+                <div class="copyright">
+                    <span><img width="95" src="../img/logo.PNG">
+                    </span>
+                    © 2022 - Todos los Derechos Reservados
                 </div>
             </div>
         </div>
